--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
     <div class="search">
         <label for=""></label><input id="search1" type="text">
-        <button id="filter">Menor precio a Mayor</button>
+        <select id="select">
+            <option selected disabled hidden>Precio</option>
+            <option value="Menor a Mayor">Menor a mayor</option>
+            <option value="Mayor a Menor">Mayor a Menor</option>
+        </select>
 
     </div>
     <div id="container"></div>
