--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
 <body>
     <div class="search">
         <label for=""></label><input id="search1" type="text">
-        <select id="select">
+        <select class="select">
             <option selected disabled hidden>Precio</option>
             <option value="Menor a Mayor">Menor a mayor</option>
             <option value="Mayor a Menor">Mayor a Menor</option>
+        </select>
+        <select class="select">
+            <option selected disabled hidden>A - Z</option>
+            <option value="A - Z">A - Z</option>
+            <option value="Z - A">Z - A</option>
         </select>
 
     </div>
