--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="search">
-        <label for=""></label><input id="search1" type="text">
+        <input id="search1" type="text">
+        <br>
+        <span>Filtros:</span>
         <select class="select">
             <option selected disabled hidden>Precio</option>
             <option value="Menor a Mayor">Menor a mayor</option>
