--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
     </div>
     <div id="container"></div>
     <div id="containerCheck"></div>
+    <div id="containerTotal"></div>
 </body>
 </html>
