--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="search">
-        <input id="search1" type="text">
+        <input id="search1" type="text" placeholder="Buscar producto">
         <br>
         <span>Filtros:</span>
         <select class="select">
