--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
     <div id="container"></div>
     <div id="containerCheck"></div>
     <div id="containerTotal"></div>
+    <button class="deleteAll">Delete Cart</button>
 </body>
 </html>
