--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="app.css">
     <script defer src="./app.js"></script>
+    <link href="toastr.css" rel="stylesheet"/>
+    <script src="toastr.js"></script>
     <script src="https://kit.fontawesome.com/5b7486fe1b.js" crossorigin="anonymous"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-comerce</title>
 </head>
 <body>
     <header id="header">
-        <img src="#" alt="logo">
+        <img src="https://png.pngtree.com/png-vector/20210422/ourlarge/pngtree-professional-polygon-logo-png-image_3220179.jpg" alt="logo">
         <nav id="nav">
             <input id="search1" type="text" placeholder="Search">
             <ul>
